Finally the horizontal scroll issue solved

--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -227,7 +227,7 @@
     }
 
     .section {
-        @apply 2xl:max-w-7xl xl:max-w-6xl lg:max-w-4xl md:max-w-3xl xs:max-w-xl mx-auto py-6;
+        @apply 2xl:max-w-7xl xl:max-w-6xl lg:max-w-4xl md:max-w-3xl xs:max-w-xl mx-auto py-6 overflow-hidden;
     }
 }
 
